--- a/index.html
+++ b/index.html
@@ -22,22 +22,26 @@
         nav{display:flex;align-items:center;justify-content:space-between;gap:16px}
         nav .brand{display:flex;align-items:center;gap:10px;font-weight:700}
         nav a{color:var(--fg);text-decoration:none}
-        .grid{display:grid;gap:16px}
+        .layout{display:grid;gap:16px;grid-template-columns:1fr}
         .hero{padding:48px 0}
         .hero h1{font-size:36px;margin:0 0 8px}
         .hero p{color:var(--muted);margin:0}
         .panel{background:var(--panel);border:1px solid rgba(124,58,237,.25);border-radius:16px;padding:20px}
         h2{margin:0 0 12px}
         .two-col{display:grid;grid-template-columns:1fr 1fr;gap:16px}
-        @media (max-width:900px){.two-col{grid-template-columns:1fr}}
+        @media (max-width:1200px){.two-col{grid-template-columns:1fr}}
         table{width:100%;border-collapse:collapse}
         th,td{padding:10px;border-bottom:1px dashed rgba(124,58,237,.25);text-align:left}
         code{background:rgba(124,58,237,.12);padding:2px 6px;border-radius:6px}
         footer{color:var(--muted);padding:24px 0}
+        /* предотвращаем перекрытие код-блоками соседних секций */
+        .panel{overflow:hidden}
+        pre code{display:block;max-width:100%}
+        pre{overflow:auto;border-radius:12px}
         .badge{display:inline-block;background:linear-gradient(135deg,var(--accent),var(--accent-2));color:white;padding:2px 10px;border-radius:999px;font-size:12px}
         .diagram{min-height:220px;display:flex;align-items:center;justify-content:center}
         .codegrid{display:grid;grid-template-columns:repeat(2,1fr);gap:16px}
-        @media (max-width:900px){.codegrid{grid-template-columns:1fr}}
+        @media (max-width:1200px){.codegrid{grid-template-columns:1fr}}
         pre{margin:0}
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
@@ -64,7 +68,7 @@
       </div>
     </header>
 
-    <main class="container grid">
+    <main class="container layout">
       <section class="hero panel">
         <span class="badge">AWS · Firebase · Laravel · Quasar</span>
         <h1>Архитектура LMS‑платформы</h1>
