--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1/plugins/autoloader/prism-autoloader.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prism-themes@1/themes/prism-one-dark.css">
     <script>Prism.plugins.autoloader.languages_path='https://cdn.jsdelivr.net/npm/prismjs@1/components/';</script>
+    <script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
     <meta name="robots" content="index,follow">
     <meta name="theme-color" content="#7c3aed">
   </head>
@@ -59,16 +60,20 @@
           <a class="brand" href="#"><span style="font-size:22px">📚</span> LMS Platform Architecture</a>
           <ul>
             <li><a href="#diagram">Диаграмма</a></li>
-            <li><a href="#components">Компоненты</a></li>
+            <li><a href="#overview">Обзор</a></li>
+            <li><a href="#client">Клиент</a></li>
+            <li><a href="#server">Сервер</a></li>
+            <li><a href="#data">Данные</a></li>
+            <li><a href="#monitoring">Мониторинг</a></li>
+            <li><a href="#stack">Технологии</a></li>
             <li><a href="#flows">Потоки</a></li>
-            <li><a href="#code">Код</a></li>
-            <li><a target="_blank" href="/puml/architecture.puml">PlantUML</a></li>
           </ul>
         </nav>
       </div>
     </header>
 
     <main class="container layout">
+      <aside class="panel" id="toc" style="display:none"></aside>
       <section class="hero panel">
         <span class="badge">AWS · Firebase · Laravel · Quasar</span>
         <h1>Архитектура LMS‑платформы</h1>
@@ -76,14 +81,90 @@
       </section>
 
       <section id="diagram" class="panel">
-        <h2>Схема (PlantUML)</h2>
-        <p class="muted">Файл рендерится в браузере через Kroki. Источник: <code>puml/architecture.puml</code>.</p>
-        <div id="diagram-container" class="diagram">Загрузка диаграммы…</div>
+        <h2>Диаграмма (Mermaid)</h2>
+        <p class="muted">Визуализация архитектуры LMS средствами Mermaid.</p>
+        <div class="diagram">
+<pre class="mermaid">flowchart TD
+    subgraph UD["User Devices"]
+        Desktop[Desktop]
+        Browser[Browser]
+        Android[Android]
+        iOS[iOS]
+    end
+    subgraph LMS["LMS Platform"]
+        Frontend["🌀 LMS Frontend<br/>Quasar Framework"]
+        Backend["📦 LMS Backend API<br/>Laravel framework"]
+        Firebase["🔥 Firebase Cloud Messaging"]
+    end
+    subgraph DB["Database Services"]
+        LMSDB["💾 LMS Database<br/>Amazon RDS MySQL"]
+        Cache["💾 Amazon DynamoDB (Cache)"]
+        Storage["☁️ Amazon S3 (Files)"]
+    end
+    subgraph MON["Monitoring"]
+        Analytics["🔥 Firebase + Google Analytics"]
+        BigQuery["🔍 BigQuery"]
+        Grafana["📊 Grafana"]
+        CloudWatch["☁️ CloudWatch"]
+        Sentry["🚨 Sentry"]
+        Slack["💬 Slack"]
+    end
+    Desktop --> Frontend
+    Desktop --> Backend
+    Browser --> Frontend
+    Browser --> Backend
+    Android --> Frontend
+    Android --> Backend
+    Android --> Firebase
+    iOS --> Frontend
+    iOS --> Backend
+    iOS --> Firebase
+    Backend --> LMSDB
+    Backend --> Cache
+    Backend --> Storage
+    Desktop --> Analytics
+    Browser --> Analytics
+    Android --> Analytics
+    iOS --> Analytics
+    Analytics --> BigQuery
+    BigQuery --> Grafana
+    Analytics --> CloudWatch
+    CloudWatch --> Sentry
+    Sentry --> Slack
+    CloudWatch --> Slack
+    Grafana --> Slack
+    Backend --> CloudWatch
+    Frontend --> Analytics
+    Firebase --> Analytics
+    classDef userDevice fill:#e8f4f8
+    classDef lmsPlatform fill:#cce7ff
+    classDef database fill:#e6f3ff
+    classDef monitoring fill:#fff2cc
+    class Desktop,Browser,Android,iOS userDevice
+    class Frontend,Backend,Firebase lmsPlatform
+    class LMSDB,Cache,Storage database
+    class Analytics,BigQuery,Grafana,CloudWatch,Sentry,Slack monitoring</pre>
+        </div>
+      </section>
+
+      <section id="overview" class="panel">
+        <h2>Архитектурная документация LMS платформы</h2>
+        <h3>Обзор архитектуры</h3>
+        <p>LMS (Learning Management System) платформа представляет собой современное образовательное решение, построенное на микросервисной архитектуре с использованием облачных технологий. Система обеспечивает мультиплатформенный доступ к образовательному контенту через веб‑интерфейс и нативные мобильные приложения.</p>
+        <p><strong>Ключевые архитектурные принципы:</strong></p>
+        <ul>
+          <li>Разделение фронтенда и бэкенда (Frontend/Backend separation)</li>
+          <li>Использование облачных сервисов для масштабируемости</li>
+          <li>Комплексная система мониторинга и аналитики</li>
+          <li>Поддержка реального времени через push‑уведомления</li>
+        </ul>
       </section>
 
       <section id="components" class="two-col">
         <div class="panel">
-          <h2>Клиентский уровень</h2>
+          <h2 id="client">Клиентский уровень (Presentation Layer)</h2>
+          <h3>Пользовательские устройства</h3>
+          <p>Платформа поддерживает четыре основных типа клиентских устройств:</p>
           <table>
             <thead>
               <tr><th>Устройство</th><th>Фреймворк</th><th>Язык</th></tr>
@@ -94,108 +175,102 @@
               <tr><td>iOS</td><td>Native</td><td>Swift</td></tr>
             </tbody>
           </table>
+          <h3>Frontend архитектура</h3>
+          <ul>
+            <li>Единая кодовая база для веб и мобильных приложений</li>
+            <li>Типобезопасность и улучшенная поддержка разработки</li>
+            <li>Компонентно‑ориентированная архитектура</li>
+            <li>Адаптивный дизайн для различных устройств</li>
+          </ul>
         </div>
         <div class="panel">
-          <h2>Серверный уровень</h2>
+          <h2 id="server">Серверный уровень (Application Layer)</h2>
+          <h3>Backend API</h3>
           <ul>
-            <li><strong>LMS Backend API</strong> — Laravel (PHP)</li>
-            <li><strong>Amazon RDS MySQL</strong> — основная БД</li>
-            <li><strong>Amazon DynamoDB</strong> — кэш и сессии</li>
-            <li><strong>Amazon S3</strong> — файловое хранилище</li>
-            <li><strong>Firebase Cloud Messaging</strong> — push‑уведомления</li>
+            <li>RESTful API для взаимодействия с клиентскими приложениями</li>
+            <li>Аутентификация и авторизация пользователей</li>
+            <li>Бизнес‑логика управления образовательным процессом</li>
+            <li>Интеграции с внешними сервисами</li>
+          </ul>
+          <h3>Система уведомлений</h3>
+          <ul>
+            <li>Кроссплатформенные push‑уведомления</li>
+            <li>Мгновенная доставка сообщений</li>
+            <li>Персонализация уведомлений по событиям</li>
           </ul>
         </div>
       </section>
 
-      <section class="two-col" id="flows">
+      <section class="two-col" id="data">
         <div class="panel">
-          <h2>Мониторинг и аналитика</h2>
+          <h2>Уровень данных (Data Layer)</h2>
+          <h3>Основная база данных</h3>
           <ul>
-            <li>Firebase & Google Analytics — продуктовая аналитика, перформанс</li>
-            <li>BigQuery — ad‑hoc SQL‑анализ</li>
-            <li>Amazon CloudWatch — инфраструктура и логи</li>
-            <li>Sentry — error tracking</li>
-            <li>Grafana — дашборды</li>
-            <li>Slack — уведомления</li>
+            <li>Amazon RDS MySQL — реляционная модель, резервное копирование</li>
+            <li>Масштабирование через read replicas, высокая доступность</li>
+          </ul>
+          <h3>Система кэширования</h3>
+          <ul>
+            <li>Amazon DynamoDB — быстрый доступ, авто‑масштабирование</li>
+          </ul>
+          <h3>Файловое хранилище</h3>
+          <ul>
+            <li>Amazon S3 — контент, CDN, версионирование, права доступа</li>
           </ul>
         </div>
         <div class="panel">
-          <h2>Основные потоки данных</h2>
-          <ol>
-            <li><strong>Аутентификация</strong>: Клиент → API → MySQL</li>
-            <li><strong>Контент</strong>: Клиент → API → S3</li>
-            <li><strong>Кэш</strong>: API ↔ DynamoDB</li>
-            <li><strong>Push</strong>: API → FCM → клиенты</li>
-            <li><strong>Мониторинг</strong>: API/Клиенты → Sentry/CloudWatch → Grafana → Slack</li>
-          </ol>
+          <h2 id="monitoring">Система мониторинга и аналитики</h2>
+          <h3>Аналитика пользовательского поведения</h3>
+          <p>Firebase и Google Analytics — трекинг, аналитика обучения, вовлеченность.</p>
+          <h3>Big Data аналитика</h3>
+          <p>BigQuery — складирование данных и SQL‑анализ.</p>
+          <h3>Визуализация метрик</h3>
+          <p>Grafana — дашборды и алерты.</p>
+          <h3>Инфраструктурный мониторинг</h3>
+          <p>Amazon CloudWatch — метрики и логи, уведомления.</p>
+          <h3>Error tracking</h3>
+          <p>Sentry — ошибки в реальном времени с подробными стеками.</p>
+          <h3>Система уведомлений</h3>
+          <p>Slack — централизованные уведомления и интеграции.</p>
         </div>
       </section>
 
-      <section id="code" class="panel">
-        <h2>Примеры кода</h2>
-        <div class="codegrid">
-          <article>
-            <h3>TypeScript · Quasar</h3>
-            <pre><code class="language-ts">import { api } from 'boot/axios'
+      <section id="stack" class="panel">
+        <h2>Технологический стек</h2>
+        <table>
+          <thead><tr><th>Компонент</th><th>Технология</th><th>Язык программирования</th></tr></thead>
+          <tbody>
+            <tr><td>Frontend Web</td><td>Quasar Framework</td><td>TypeScript</td></tr>
+            <tr><td>Backend API</td><td>Laravel Framework</td><td>PHP</td></tr>
+            <tr><td>iOS App</td><td>Native</td><td>Swift</td></tr>
+            <tr><td>Android App</td><td>Native</td><td>Kotlin</td></tr>
+            <tr><td>База данных</td><td>Amazon RDS MySQL</td><td>SQL</td></tr>
+            <tr><td>Кэш</td><td>Amazon DynamoDB</td><td>NoSQL</td></tr>
+            <tr><td>Файловое хранилище</td><td>Amazon S3</td><td>—</td></tr>
+            <tr><td>Push уведомления</td><td>Firebase Cloud Messaging</td><td>—</td></tr>
+          </tbody>
+        </table>
+      </section>
 
-async function fetchCourses(): Promise&lt;Array&lt;{ id: number; title: string }&gt;&gt; {
-  const { data } = await api.get('/courses')
-  return data
-}
-
-export async function sendPushToken(token: string): Promise&lt;void&gt; {
-  await api.post('/devices', { token })
-}</code></pre>
-          </article>
-
-          <article>
-            <h3>PHP · Laravel API</h3>
-            <pre><code class="language-php">&lt;?php
-use Illuminate\Support\Facades\Cache;
-use Illuminate\Support\Facades\Storage;
-
-Route::get('/courses', function () {
-    return Cache::remember('courses', 60, fn() => Course::query()
-        ->select(['id','title'])
-        ->orderBy('title')
-        ->get());
-});
-
-Route::post('/devices', function (Request $request) {
-    // Сохранить FCM‑токен устройства
-    Device::updateOrCreate(
-        ['token' => $request->string('token')],
-        ['platform' => $request->string('platform', 'web')]
-    );
-    return response()->noContent();
-});</code></pre>
-          </article>
-
-          <article>
-            <h3>Swift · iOS</h3>
-            <pre><code class="language-swift">import UserNotifications
-
-func registerForPush(_ application: UIApplication) {
-  UNUserNotificationCenter.current().requestAuthorization(options: [.alert, .badge, .sound]) { granted, _ in
-    if granted { DispatchQueue.main.async { application.registerForRemoteNotifications() } }
-  }
-}</code></pre>
-          </article>
-
-          <article>
-            <h3>Kotlin · Android</h3>
-            <pre><code class="language-kotlin">class MyFirebaseService : FirebaseMessagingService() {
-  override fun onNewToken(token: String) {
-    // Отправка токена в API
-    Api.post("/devices", mapOf("token" to token))
-  }
-}</code></pre>
-          </article>
-        </div>
+      <section id="flows" class="panel">
+        <h2>Потоки данных</h2>
+        <h3>Основные пользовательские сценарии</h3>
+        <ol>
+          <li><strong>Аутентификация пользователя</strong>: Клиент → LMS Backend API → LMS Database</li>
+          <li><strong>Загрузка образовательного контента</strong>: Клиент → LMS Backend API → Amazon S3</li>
+          <li><strong>Кэширование данных</strong>: LMS Backend API → DynamoDB → Клиент</li>
+          <li><strong>Push‑уведомления</strong>: LMS Backend API → Firebase Cloud Messaging → Клиенты</li>
+        </ol>
+        <h3>Мониторинг и аналитика</h3>
+        <ol>
+          <li><strong>Пользовательские события</strong>: Клиенты → Firebase Analytics → BigQuery</li>
+          <li><strong>Системные метрики</strong>: AWS сервисы → CloudWatch → Grafana</li>
+          <li><strong>Ошибки приложения</strong>: Backend/Frontend → Sentry → Slack</li>
+        </ol>
       </section>
 
       <footer>
-        <p>© 2025 LMS Platform. Диаграмма рендерится с помощью Kroki/PlantUML. Исходники доступны в репозитории.</p>
+        <p>© 2025 LMS Platform. Диаграмма: Mermaid. Исходники доступны в репозитории.</p>
       </footer>
     </main>
   </body>
