--- a/index.html
+++ b/index.html
@@ -67,7 +67,21 @@
     </header>
 
     <main class="container layout">
-      <aside class="panel" id="toc"></aside>
+      <aside class="panel" id="toc">
+        <h2>Разделы</h2>
+        <nav id="toc-nav">
+          <ul>
+            <li><a href="#diagram">Диаграмма (Mermaid)</a></li>
+            <li><a href="#flows">Потоки данных</a></li>
+            <li><a href="#overview">Архитектурная документация</a></li>
+            <li><a href="#client">Клиентский уровень</a></li>
+            <li><a href="#server">Серверный уровень</a></li>
+            <li><a href="#data">Уровень данных</a></li>
+            <li><a href="#monitoring">Система мониторинга</a></li>
+            <li><a href="#stack">Технологический стек</a></li>
+          </ul>
+        </nav>
+      </aside>
       <div class="content">
       <section class="hero panel">
         <span class="badge">AWS · Firebase · Laravel · Quasar</span>
