--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <header>
       <div class="container">
         <nav>
-          <a class="brand" href="#"><span style="font-size:22px">📚</span> LMS Platform Architecture</a>
+          <a class="brand" href="#"><span style="font-size:22px">📚</span> Тестовое задание LMS Platform Architecture</a>
         </nav>
       </div>
     </header>
@@ -67,9 +67,9 @@
         <h2>Разделы</h2>
         <nav id="toc-nav">
           <ul>
-            <li><a href="#diagram">Диаграмма (Mermaid)</a></li>
-            <li><a href="#flows">Потоки данных</a></li>
+            <li><a href="#diagram">Диаграмма</a></li>
             <li><a href="#overview">Архитектурная документация</a></li>
+            <li><a href="#flows">Потоки данных</a></li>
             <li><a href="#client">Клиентский уровень</a></li>
             <li><a href="#server">Серверный уровень</a></li>
             <li><a href="#data">Уровень данных</a></li>
@@ -85,9 +85,22 @@
         <p>Кроссплатформенный фронтенд (Web, Android, iOS), Laravel‑бэкенд, хранилище на AWS, FCM, и стек мониторинга с Sentry, CloudWatch, Grafana.</p>
       </section>
 
+      <section id="overview" class="panel">
+        <h2>Архитектурная документация LMS платформы</h2>
+        <h3>Обзор архитектуры</h3>
+        <p>LMS (Learning Management System) платформа представляет собой образовательное решение, построенное на микросервисной архитектуре с использованием облачных технологий. Система обеспечивает мультиплатформенный доступ к образовательному контенту через веб‑интерфейс и нативные мобильные приложения.</p>
+        <p><strong>Ключевые архитектурные принципы:</strong></p>
+        <ul>
+          <li>Разделение фронтенда и бэкенда (Frontend/Backend separation)</li>
+          <li>Использование облачных сервисов для масштабируемости</li>
+          <li>Комплексная система мониторинга и аналитики</li>
+          <li>Поддержка реального времени через push‑уведомления</li>
+        </ul>
+      </section>
+
       <section id="diagram" class="panel">
-        <h2>Диаграмма (Mermaid)</h2>
-        <p class="muted">Визуализация архитектуры LMS средствами Mermaid.</p>
+        <h2>Диаграмма</h2>
+        <p class="muted">Визуализация архитектуры LMS при помощи Mermaid.</p>
         <div class="diagram">
 <pre class="mermaid">flowchart TD
     subgraph UD["User Devices"]
@@ -167,19 +180,6 @@
           <li><strong>Системные метрики</strong>: AWS сервисы → CloudWatch → Grafana</li>
           <li><strong>Ошибки приложения</strong>: Backend/Frontend → Sentry → Slack</li>
         </ol>
-      </section>
-
-      <section id="overview" class="panel">
-        <h2>Архитектурная документация LMS платформы</h2>
-        <h3>Обзор архитектуры</h3>
-        <p>LMS (Learning Management System) платформа представляет собой современное образовательное решение, построенное на микросервисной архитектуре с использованием облачных технологий. Система обеспечивает мультиплатформенный доступ к образовательному контенту через веб‑интерфейс и нативные мобильные приложения.</p>
-        <p><strong>Ключевые архитектурные принципы:</strong></p>
-        <ul>
-          <li>Разделение фронтенда и бэкенда (Frontend/Backend separation)</li>
-          <li>Использование облачных сервисов для масштабируемости</li>
-          <li>Комплексная система мониторинга и аналитики</li>
-          <li>Поддержка реального времени через push‑уведомления</li>
-        </ul>
       </section>
 
       <section id="client" class="panel">
