--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
     <header>
       <div class="container">
         <nav>
-          <a class="brand" href="#"><span style="font-size:20px">📚</span> LMS Platform Architecture</a>
+          <a class="brand" href="#"><span style="font-size:20px">📚</span> Тестовое задание LMS Platform Architecture</a>
         </nav>
       </div>
     </header>
@@ -883,7 +883,7 @@
       </section>
 
       <footer>
-        <p>© 2025 Chepkov Eugene. Диаграмма: Mermaid. Исходники доступны в [репозитории](https://github.com/metroproliv/TestWork).</p>
+        <p>© 2025 Chepkov Eugene. Диаграмма: Mermaid. Исходники доступны в репозитории.</p>
       </footer>
       </div>
     </main>
