--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
         </ul>
 
         <h3>Мониторинг ошибок</h3>
-        <p><strong>Sentry</strong> — это система мониторинга ошибок реального времени. Сервис автоматически группирует похожие ошибки и предоставляет stack trace с контекстной информацией. Настроена интеграция с системой контроля версий для отслеживания регрессий.</p>
+        <p><strong>Sentry</strong> — это система мониторинга ошибок в реальном времени. Сервис автоматически группирует похожие ошибки и предоставляет stack trace с контекстной информацией. Настроена интеграция с системой контроля версий для отслеживания регрессий.</p>
         
         <p>Возможности Sentry:</p>
         <ul>
